<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.change_password.ChangePasswordActivity">

    <include
        layout="@layout/toolbar_layout"
        android:id="@+id/changePasswordToolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="15dp">
        <TextView
            android:text="@string/set_new_password"
            style="@style/TextMedium.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/create_new_password"
            style="@style/TextSM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/current_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextMedium.Bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currentPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="1sp"
                android:layout_marginTop="2.5dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5sp"
                    android:hint="@string/enter_your_current_password"
                    android:padding="12sp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextMedium.Bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/changePasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="1sp"
                android:layout_marginTop="2.5dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/changePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5sp"
                    android:hint="@string/enter_your_new_password"
                    android:padding="12sp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">
            <TextView
                android:text="@string/confirm_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextMedium.Bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="1sp"
                android:layout_marginTop="2.5dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5sp"
                    android:hint="@string/re_enter_password"
                    android:padding="12sp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updatePassword"
            android:layout_marginTop="20dp"
            android:text="@string/update_password"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>