<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20sp"
    android:background="@color/primary"
    tools:context=".features.auth.SignInActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50sp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_upload"
            />

        <Button
            style="@style/TextXL.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/signInHeader" />

    </LinearLayout>
    <com.google.android.material.card.MaterialCardView
        style="@style/Card.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="25dp"
            android:paddingHorizontal="17.5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:text="@string/sign_in_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text2XL.Bold"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:text="@string/dont_have_a_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextMedium"
                        />
                    <TextView
                        android:id="@+id/sign_up"
                        style="@style/ButtonWithNoBorder"
                        android:text="@string/sign_up_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0sp"
                        android:textAlignment="textStart"
                        android:layout_marginStart="5sp"
                        />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="1sp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5sp"
                    android:hint="@string/email_hint"
                    android:padding="12sp"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="1sp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:hint="@string/password_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12sp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                style="@style/ButtonWithNoBorder"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="0dp"
                android:gravity="center"
                android:layout_marginEnd="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in"
                style="@style/Button"
                android:text="@string/sign_in_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>