<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.get_started.GetStartedActivity">

    <ImageView
        android:id="@+id/myImageView"
        android:contentDescription="@string/get_started_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/bottomContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.941"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/myImageViewText"
            style="@style/Heading.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="5sp"
            android:gravity="center"
            android:text="@string/get_started_title" />

        <TextView
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/get_started_description"
            android:textColor="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.5sp"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up"
                style="@style/ButtonOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7.5sp"
                android:text="@string/sign_up" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in"
                style="@style/Button.Rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>